se adiciona todo lo relacionado a noticias

--- a/src/main/resources/templates/agregar.html
+++ b/src/main/resources/templates/agregar.html
@@ -2,15 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Categoría</title>
+    <title>Categoria</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
 	<nav class="navbar navbar-dark bg-dark">
-		<a class="navbar-brand" th:href="@{/categorias}">
-			Categorias <img
+		<a class="navbar-brand" th:href="@{/categorias}"> Categorias <img
 			src="https://w7.pngwing.com/pngs/894/405/png-transparent-bookmark-computer-icons-category-folders-angle-text-rectangle.png"
+			width="30" height="30" class="d-inline-block align-top" alt="">
+		</a> <a class="navbar-brand" th:href="@{/news}"> Noticias <img
+			src="https://e7.pngegg.com/pngimages/422/126/png-clipart-newspaper-computer-icons-symbol-news-icon-text-logo.png"
 			width="30" height="30" class="d-inline-block align-top" alt="">
 		</a>
 	</nav>
