--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,11 @@
 				<img src="https://w7.pngwing.com/pngs/894/405/png-transparent-bookmark-computer-icons-category-folders-angle-text-rectangle.png" 
 				width="30" height="30" class="d-inline-block align-top" alt="">
 			</a>
+			<a  class="navbar-brand" th:href="@{/news}">
+				Noticias
+				<img src="https://e7.pngegg.com/pngimages/422/126/png-clipart-newspaper-computer-icons-symbol-news-icon-text-logo.png" 
+				width="30" height="30" class="d-inline-block align-top" alt="">
+			</a>
 		</nav>
 		<br>
 		<h2 class="text-center">Listado de categorias</h2>
@@ -38,5 +43,6 @@
 				</tr>
 			</tbody>
 		</table>
+		
 	</body>
 </html>
