se agrega la funcion de selecciona categorias validas en noticia

--- a/src/main/resources/templates/noticia.html
+++ b/src/main/resources/templates/noticia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-		<meta charset="ISO-8859-1">
+		<meta charset="utf-8">
 		<title>Noticia</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
 				integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -42,7 +42,7 @@
 					<td th:text="${noticia.titulo}"></td>
 					<td th:text="${noticia.desarrollo}"></td>
 					<td th:text="${noticia.fecha}"></td>
-					<td th:text="${noticia.categoria.id}"></td>
+					<td th:text="${noticia.categoria.descripcion}"></td>
 					<td th:text="${noticia.url}"></td>
 					<td th:text="${noticia.resumen}"></td>
 					<td>
